--- a/content/blog/hello-world.mdx
+++ b/content/blog/hello-world.mdx
@@ -1,6 +1,6 @@
 ---
 title: Hello world
-descripion: This is our first blog post
+description: This is our first blog post
 date: 2024-04-18
 published: true
 ---
@@ -8,3 +8,4 @@ published: true
 # Hello world
 
 welcome
+dsadadadaddsadasda
