--- a/content/blog/variable.mdx
+++ b/content/blog/variable.mdx
@@ -5,6 +5,8 @@ date: 2024-04-24
 published: true
 ---
 
+![실행 컨텍스트 썸네일](https://plus.unsplash.com/premium_photo-1711438464037-ffc4f358fc23?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+
 ### **변수란 무엇인가? 왜 필요한가?**
 
 애플리케이션은 본질적으로 데이터를 처리하는 것입니다. 복잡한 애플리케이션도 결국 데이터를 입력 받아 처리하고, 그 결과를 사용자에게 제공합니다. 이러한 과정에서 **변수**는 프로그래밍 언어에서 데이터를 관리하는 핵심적인 역할을 담당합니다.
