[feat] 글 생성시 첫번째 이미지로 썸네일 생성

--- a/content/blog/context.mdx
+++ b/content/blog/context.mdx
@@ -7,7 +7,7 @@ published: true
 
 ## 실행 컨텍스트
 
-![실행 컨텍스트 썸네일](https://plus.unsplash.com/premium_photo-1711438464037-ffc4f358fc23?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+![실행 컨텍스트 썸네일](https://github.com/thdtjdgml415/next-blog/blob/main/public/static/blog/context.jpg?raw=true)
 
 실행 컨텍스트는 자바스크립트 동작 원리를 담고 있는 핵심 개념이다. 이를 잘 이해하면 자바스크립트의 여러가지 동작원리에 대해 자세하게 이해할 수 있다.
 
