--- a/content/blog/Expression-Statement.mdx
+++ b/content/blog/Expression-Statement.mdx
@@ -5,7 +5,7 @@ date: 2024-04-24
 published: true
 ---
 
-![실행 컨텍스트 썸네일](https://plus.unsplash.com/premium_photo-1711438464037-ffc4f358fc23?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+![실행 컨텍스트 썸네일](https://github.com/thdtjdgml415/next-blog/blob/main/public/static/blog/Expression-Statement.jpg?raw=true)
 
 개념을 파악하는 데 있어서 용어의 정확한 이해와 설명이 필수적입니다. 핵심적인 개념 중 하나는 바로 '값'입니다. **값**이란, 식(표현식)이 평가되어 생성된 결과를 지칭합니다. 이때 '평가'는 식을 해석하여 값을 생성하거나 참조하는 과정을 의미합니다.
 
