--- a/content/blog/variable.mdx
+++ b/content/blog/variable.mdx
@@ -5,7 +5,7 @@ date: 2024-04-24
 published: true
 ---
 
-![실행 컨텍스트 썸네일](https://plus.unsplash.com/premium_photo-1711438464037-ffc4f358fc23?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+![실행 컨텍스트 썸네일](https://github.com/thdtjdgml415/next-blog/blob/main/public/static/blog/variable.jpg?raw=true)
 
 ### **변수란 무엇인가? 왜 필요한가?**
 
