[modify] 쓸모 없는 글 삭제 및 이미지 경로 수정

--- a/content/blog/variable.mdx
+++ b/content/blog/variable.mdx
@@ -5,7 +5,7 @@ date: 2024-04-24
 published: true
 ---
 
-![실행 컨텍스트 썸네일](https://github.com/thdtjdgml415/next-blog/blob/main/public/static/blog/variable.jpg?raw=true)
+![실행 컨텍스트 썸네일](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/variable.webp)
 
 ### **변수란 무엇인가? 왜 필요한가?**
 
