--- a/content/blog/variable.mdx
+++ b/content/blog/variable.mdx
@@ -2,7 +2,7 @@
 title: 변수
 description: 자바스크립트 변수에 대한 이야기
 date: 2024-04-24
-tags: [javascript]
+tags: [javascript, mordern]
 published: true
 ---
 
