[feat] 목차 기능 개발 완료

--- a/content/blog/Comparison-of-raw-values-and-objects.mdx
+++ b/content/blog/Comparison-of-raw-values-and-objects.mdx
@@ -16,11 +16,11 @@ published: true
 - 원시 값을 변수에 할당하면 변수(확보된 메모리 공간)에는 실제 값이 저장되는데, 이에 비해 객체를 변수에 할당하면 변수에 참조 값이 저장된다.
 - **원시 값을 갖는 변수**를 다른 변수에 할당시 원시 값이 복사되어 전달되고 이를 **값에 의한 전달**이라 한다. 이에 비해 **객체를 가르키는 변수**를 다른 변수에 할당하면 원본의 참조 값이 복사되어 전달된다. 이를 **참조에 의한 전달이라** 한다.
 
-## 원시 값
+## 1. 원시 값
 
 ---
 
-### 변경 불가능한 값
+### 1.1 변경 불가능한 값
 
 `원시 타입의 값`, 즉 원시 값은 변경 불가능한 값이라고 한다. 변경 불가능한 값의 핵심은 데이터의 **안정성과 예측 가능성**이다. `원시 값`은 메모리 상에 고정된 데이터로 존재하는데 이 데이터의 상태를 직접적을 변경할 수 없기 때문에 **데이터의 신뢰도가 상승한다**. 데이터를 공유하더라도 **원본 데이터가 예기치 않게 변경되는 것을 방지한다.**
 
@@ -42,7 +42,7 @@ console.log(newString); // 출력: "world"
 
 불변성을 갖는 원시 값을 할당한 변수는 재할당 이외에 변수의 값을 변경할 수 없다.
 
-### 문자열과 불변성
+### 1.2 문자열과 불변성
 
 `문자열`은 다른 **원시 타입과 다른 특징이 있다.** 원시 타입별로 메모리 공간의 크기가 미리 정해져 있는데, 문자열은 0개 이상의 문자로 이뤄진 집합을 말한다. 단순하게 이야기 해보자면, 1개의 문자는 2바이트의 메모리 공간에 저장되는데 10개의 문자는 20바이트의 메모리 공간이 필요하다는 말이다. 하지만 숫자 값은 1도 1000000도 동일한 8바이트가 필요하다.
 
@@ -87,7 +87,7 @@ console.log(str); // string
 
 불변성의 중요한 점은 원시 값에 값을 재할당 했을때 새로운 공간을 만들어 참조 값을 저장하고 메모리 공간의 주소를 갖고 있는 다는 점이다.
 
-### 값에 의한 전달
+### 1.3 값에 의한 전달
 
 하나의 예시를 보자
 
@@ -137,7 +137,7 @@ console.log(score === copy) false
 
 실제로, 메모리 공간의 주소가 전달되는 것이기 때문이다.
 
-## 객체
+## 2. 객체
 
 ---
 
@@ -151,7 +151,7 @@ console.log(score === copy) false
 
 따라서 객체는 원시 값과 다른 방식으로 동작하도록 설계되어 있다.
 
-### 변경 가능한 값
+### 2.1 변경 가능한 값
 
 **객체(참조) 타입의 값. 즉 객체는 변경 가능한 값이다.**
 
@@ -184,7 +184,7 @@ console.log(person); // {name: "Kim", address: "Seoul"}
 
 객체는 구조적 단점에 따른 부작용이 있다. 원시 값과는 다르게 **여러개의 식별자가 하나의 객체를 공유할 수 있다는 것이다.**
 
-### 얕은 복사와 깊은복사
+### 2.2 얕은 복사와 깊은복사
 
 객체를 프로퍼티 값으로 갖는 경우 얕은 복사는 한 단계까지만 복사하는 것을 말하고 깊은 복사는 객체에 중첩되어 있는 객체까지 모두 복사하는 것을 말한다.
 
@@ -221,7 +221,7 @@ const c2 = o;
 console.log(c2 === o); // true
 ```
 
-### 참조에 의한 전달
+### 2.3 참조에 의한 전달
 
 여러개의 식별자가 하나의 객체를 공유할 수 있다는 것은 부작용을 동반한다.
 
