--- a/content/blog/context.mdx
+++ b/content/blog/context.mdx
@@ -8,7 +8,7 @@ published: true
 
 ![실행 컨텍스트 썸네일](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/context.webp)
 
-## 실행 컨텍스트
+# 1. 실행 컨텍스트
 
 실행 컨텍스트는 자바스크립트 동작 원리를 담고 있는 핵심 개념이다. 이를 잘 이해하면 자바스크립트의 여러가지 동작원리에 대해 자세하게 이해할 수 있다.
 
@@ -20,7 +20,7 @@ published: true
 
 등을 이해하는데 도움이 된다. 차근차근 알아보자
 
-## 실행 컨텍스트의 구성 요소
+## 1.2 실행 컨텍스트의 구성 요소
 
 ---
 
@@ -36,7 +36,7 @@ published: true
    - 실행 컨텍스트가 참조하는 **this**의 값이 결정되고 저장
    - 함수 호출 방식(일반 함수 호출, 메서드 호출, 생성자 함수 호출 등)에 따라 **this**의 값이 달라진다.
 
-## 실행 컨텍스트의 생성 및 수명 주기
+## 1.3 실행 컨텍스트의 생성 및 수명 주기
 
 ---
 
@@ -53,7 +53,7 @@ published: true
    - 실행 컨텍스트의 코드 실행이 완료되면 해당 컨텍스트는 스택에서 팝된다.
    - 모든 로컬 변수와 함수 정의가 메모리에서 제거(클로저가 있는 경우를 제외).
 
-## 소스코드의 타입
+## 1.4 소스코드의 타입
 
 ---
 
@@ -66,7 +66,7 @@ ECMAScript 사양은 소스코드를 4가지 타입으로 구분하는데 이는
 | eval 코드     | eval() 함수 내부에 있는 코드 블록을 의미합니다.                               | - 독립적인 컨텍스트가 생성되어, eval 내부의 코드를 평가합니다.<br/>- eval 코드의 스코프는 eval이 호출된 컨텍스트에 종속됩니다.                                                                           |
 | 모듈 코드     | ES6 모듈의 코드를 의미합니다. 모듈 스코프는 해당 모듈 내부로 제한됩니다.      | - 모듈별로 독립된 컨텍스트가 생성됩니다.<br/>- 모듈 내부에서 선언된 변수, 함수, 클래스 등이 모듈 스코프에 포함됩니다.                                                                                    |
 
-## 소스코드의 평가와 실행
+## 1.5 소스코드의 평가와 실행
 
 ---
 
@@ -93,7 +93,7 @@ x = 1;
 
 ![실행 컨텍스트 이미지](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/context2.webp)
 
-## 실행 컨텍스트의 역할
+## 1.6 실행 컨텍스트의 역할
 
 ---
 
@@ -142,7 +142,7 @@ console.log(x + y);
 
 **식별자**와 **스코프**는 **실행 컨텍스트**의 렉시컬 환경으로 관리하고 **코드 실행 순서**는 실행 컨텍스트 스택으로 관리한다.
 
-## 실행 컨텍스트 스택
+## 1.7 실행 컨텍스트 스택
 
 ---
 
@@ -197,6 +197,6 @@ foo(); // 6
    2. 자바스크립트 엔진은 **foo 함수 실행 컨텍스트**를 실행 컨텍스트 스택에서 팝하여 제거한다.
    3. 더 이상 실행할 코드가 존재하지 않아 **전역 실행 컨텍스트**도 스택에서 팝하여 제거한다.
 
-### 결론
+# 8. 결론
 
 **실행 컨텍스트 스택**은 코드의 실행 순서를 관리한다. **실행 컨텍스트 스택** 의 최상위에 존재하는 **실행 컨텍스트**는 언제나 **현재 실행 중인 코드의 실행 컨텍스트**다.
