--- a/content/blog/Type-Conversions-Short-Circuit-Evaluation.mdx
+++ b/content/blog/Type-Conversions-Short-Circuit-Evaluation.mdx
@@ -8,7 +8,9 @@ published: true
 
 ![타입변환과 단축평가 썸네일](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/Type-Conversions-Short-Circuit-Evaluation.webp)
 
-### 타입 변환이란?
+# 1. 타입 변환과 단축평가
+
+## 1.1 타입 변환이란?
 
 ---
 
@@ -53,47 +55,47 @@ console.log(str + ""); // "10"
 
 자바스크립트에서 타입 변환이 두 가지 방식으로 발생합니다: **암묵적 타입 변환**(Implicit Type Coercion)과 **명시적 타입 변환**(Explicit Type Conversion)입니다. 여기서 각각의 방식에 대한 예시를 코드와 함께 살펴보자.
 
-- **암묵적 타입 변환 예시**
+### 3.1.1 암묵적 타입 변환 예시
 
-  암묵적 타입 변환은 자바스크립트 엔진에 의해 자동으로 수행되는 타입 변환이다. 연산자의 사용이나 특정 상황에서 자동으로 발생한다.
+암묵적 타입 변환은 자바스크립트 엔진에 의해 자동으로 수행되는 타입 변환이다. 연산자의 사용이나 특정 상황에서 자동으로 발생한다.
 
-  ```jsx
-  // 숫자와 문자열의 연산
-  let result = "3" + 2; // '32', 숫자 2가 문자열 '2'로 변환되어 연결됩니다.
+```jsx
+// 숫자와 문자열의 연산
+let result = "3" + 2; // '32', 숫자 2가 문자열 '2'로 변환되어 연결됩니다.
 
-  // 불리언 값을 숫자와 연산
-  let result2 = "5" - true; // 4, true가 1로 변환되어 연산됩니다.
+// 불리언 값을 숫자와 연산
+let result2 = "5" - true; // 4, true가 1로 변환되어 연산됩니다.
 
-  // 객체를 문자열로 연결
-  let result3 = "Age: " + { age: 30 }; // "Age: [object Object]", 객체가 문자열로 변환됩니다.
+// 객체를 문자열로 연결
+let result3 = "Age: " + { age: 30 }; // "Age: [object Object]", 객체가 문자열로 변환됩니다.
 
-  // 논리 연산자와 함께 사용
-  let result4 = "6" * "2"; // 12, 문자열이 숫자로 변환되어 연산됩니다.
-  ```
+// 논리 연산자와 함께 사용
+let result4 = "6" * "2"; // 12, 문자열이 숫자로 변환되어 연산됩니다.
+```
 
-- **명시적 타입 변환 예시**
+### 3.1.2 명시적 타입 변환 예시
 
-  명시적 타입 변환은 개발자가 직접 코드를 작성하여 타입을 변환하는 것을 말한다. 이는 주로 내장 함수를 사용하거나 특정 문법을 사용하여 수행된다..
+명시적 타입 변환은 개발자가 직접 코드를 작성하여 타입을 변환하는 것을 말한다. 이는 주로 내장 함수를 사용하거나 특정 문법을 사용하여 수행된다..
 
-  ```jsx
-  // 문자열을 숫자로 변환
-  let num = Number("10"); // 10
+```jsx
+// 문자열을 숫자로 변환
+let num = Number("10"); // 10
 
-  // 숫자를 문자열로 변환
-  let str = String(10); // '10'
+// 숫자를 문자열로 변환
+let str = String(10); // '10'
 
-  // 불리언으로 변환
-  let bool = Boolean(1); // true
+// 불리언으로 변환
+let bool = Boolean(1); // true
 
-  // 숫자를 부울린으로 변환
-  let isTrue = !!1; // true, '!!' 연산자 사용
+// 숫자를 부울린으로 변환
+let isTrue = !!1; // true, '!!' 연산자 사용
 
-  // 문자열을 숫자로 변환하는 다른 방법
-  let parsedInt = parseInt("20"); // 20
-  let parsedFloat = parseFloat("20.01"); // 20.01
-  ```
+// 문자열을 숫자로 변환하는 다른 방법
+let parsedInt = parseInt("20"); // 20
+let parsedFloat = parseFloat("20.01"); // 20.01
+```
 
-### 단축 평가
+## 1.2 단축 평가
 
 ---
 
@@ -138,7 +140,7 @@ console.log(str + ""); // "10"
 
 이처럼 **논리 연산의 결과를 결정하는 피연산자를 타입 변환하지 않고 그대로 반환한다. 이를 단축 평가라 한다. 단축 평가는 표현식을 평가하는 도중에 평가 결과가 확정된 경우 나머지 평가 결과를 생략하는 것을 말한다.**
 
-### 옵셔널 체이닝 `?`
+## 1.3 옵셔널 체이닝
 
 ---
 
@@ -146,33 +148,33 @@ console.log(str + ""); // "10"
 
 객체 속성을 읽을 때, 해당 속성이 존재하지 않아서 발생할 수 있는 오류를 방지하고 가독성을 향상 시킨다.
 
-- **옵셔널 체이닝의 기본 사용법**
+### 1.3.1 옵셔널 체이닝의 기본 사용법
 
-  옵셔널 체이닝을 사용하면, 객체의 속성에 접근할 때 그 속성이 존재하지 않아도 에러가 발생하지 않고, 대신 **`undefined`**를 반환합니다. 이는 객체가 **`null`**이나 **`undefined`**인 경우에도 마찬가지로 적용됩니다.
+옵셔널 체이닝을 사용하면, 객체의 속성에 접근할 때 그 속성이 존재하지 않아도 에러가 발생하지 않고, 대신 `undefined`를 반환합니다. 이는 객체가 `null`이나 `undefined`인 경우에도 마찬가지로 적용됩니다.
 
-  ```jsx
-  const person = {
-    name: "John",
-    address: {
-      street: "123 Main St",
-      city: "Anywhere",
-    },
-  };
+```jsx
+const person = {
+  name: "John",
+  address: {
+    street: "123 Main St",
+    city: "Anywhere",
+  },
+};
 
-  // 옵셔널 체이닝을 사용하지 않는 경우
-  console.log(person.address.street); // '123 Main St'
-  console.log(person.address.zipCode); // undefined
-  console.log(person.profile.age); // TypeError: Cannot read property 'age' of undefined
+// 옵셔널 체이닝을 사용하지 않는 경우
+console.log(person.address.street); // '123 Main St'
+console.log(person.address.zipCode); // undefined
+console.log(person.profile.age); // TypeError: Cannot read property 'age' of undefined
 
-  // 옵셔널 체이닝을 사용하는 경우
-  console.log(person.address?.street); // '123 Main St'
-  console.log(person.address?.zipCode); // undefined
-  console.log(person.profile?.age); // undefined
-  ```
+// 옵셔널 체이닝을 사용하는 경우
+console.log(person.address?.street); // '123 Main St'
+console.log(person.address?.zipCode); // undefined
+console.log(person.profile?.age); // undefined
+```
 
-  옵셔널 체이닝을 사용하면 **`person.profile?.age`**처럼 **`profile`** 속성이 존재하지 않아도 에러가 발생하지 않고 **`undefined`**가 반환됩니다
+옵셔널 체이닝을 사용하면 `person.profile?.age`처럼 `profile` 속성이 존재하지 않아도 에러가 발생하지 않고 `undefined`가 반환됩니다
 
-### Null 병합 연산자 `??`
+## 1.4 null 병합 연산자
 
 ---
 
