--- a/content/blog/control-flow-statement.mdx
+++ b/content/blog/control-flow-statement.mdx
@@ -14,7 +14,7 @@ published: true
 
 제어문을 사용할 때 여러 고차 함수를 사용한 프로그래밍 기법들이 있지만 가장 기본적인 for 문을 알고 사용해야 고차 함수에서도 무리없이 사용이 가능한다.
 
-### 블록문
+# 1.블록문
 
 ---
 
@@ -42,9 +42,9 @@ function sum(a, b) {
 }
 ```
 
-{}를 사용해서 문을 묶어 그 안에서 표현식을 실행하는 실행할 수 있고 표현식을 묶어서 하나의 블록 단위로 만들 수 있다.
+&#123;&#125;를 사용해서 문을 묶어 그 안에서 표현식을 실행하는 실행할 수 있고 표현식을 묶어서 하나의 블록 단위로 만들 수 있다.
 
-### 조건문
+# 2.조건문
 
 ---
 
@@ -54,266 +54,266 @@ function sum(a, b) {
 
 자바스크립트에서는 if..else , switch 두가지의 조건문을 제공한다.
 
-- if… else문
+## 2.1 if… else문
 
-  `if…else` 문은 주어진 조건식의 평가 결과, 즉 논리적인 평가결과 참, 거짓에 따라 코드 블록을 실행 유무를 판단한다.
+`if…else` 문은 주어진 조건식의 평가 결과, 즉 논리적인 평가결과 참, 거짓에 따라 코드 블록을 실행 유무를 판단한다.
 
-  조건식의 평가 결과가 true일 경우 if 문의 코드 블록이 실행되고, false인 경우 else 문의 코드 블록이 실행된다.
+조건식의 평가 결과가 true일 경우 if 문의 코드 블록이 실행되고, false인 경우 else 문의 코드 블록이 실행된다.
 
-  ```jsx
-  if (조건식) {
-    // 조건식이 true일때 실행
-  } else {
-    // 조건식이 false일때 실행
-  }
-  ```
+```jsx
+if (조건식) {
+  // 조건식이 true일때 실행
+} else {
+  // 조건식이 false일때 실행
+}
+```
 
-  if 문의 조건식은 불리언 값으로 평가 되어야 한다. 만약 if 문의 조건식이 불리언 값이 아닌 다른 값으로 평가되면 암묵적으로 불리언 값으로 강제 변환되어 실행된다.
+if 문의 조건식은 불리언 값으로 평가 되어야 한다. 만약 if 문의 조건식이 불리언 값이 아닌 다른 값으로 평가되면 암묵적으로 불리언 값으로 강제 변환되어 실행된다.
 
-  조건식을 추가하여 조건에 따라 실행될 코드 블록을 실행하고 싶다면
+조건식을 추가하여 조건에 따라 실행될 코드 블록을 실행하고 싶다면
 
-  ```jsx
-  if (조건식1) {
-    // 조건식1 이 true일 때 실행
-  } else if (조건식2) {
-    // 조건식1이 false고 조건식2 true 일 때 실행
-  } else {
-    // 조건식1, 조건식2 ==> false, false 일때 실행
-  }
-  ```
+```jsx
+if (조건식1) {
+  // 조건식1 이 true일 때 실행
+} else if (조건식2) {
+  // 조건식1이 false고 조건식2 true 일 때 실행
+} else {
+  // 조건식1, 조건식2 ==> false, false 일때 실행
+}
+```
 
-  else if 문을 중간에 추가하여 추가로 조건을 설정한다.
+else if 문을 중간에 추가하여 추가로 조건을 설정한다.
 
-  만약 조건문에 실행문이 하나라면 중괄호를 생략할 수 있다.
+만약 조건문에 실행문이 하나라면 중괄호를 생략할 수 있다.
 
-  ```jsx
-  var num = 2;
-  var kind;
+```jsx
+var num = 2;
+var kind;
 
-  if(num > 0) kind = "양수";
-  else if (num < 0) kind = "음수";
-  else kind '0';
+if(num > 0) kind = "양수";
+else if (num < 0) kind = "음수";
+else kind '0';
 
-  console.log(kind) // 양수
-  ```
+console.log(kind) // 양수
+```
 
-  조건식은 삼항 조건 연산자로 표현이 가능하다. 하지만 조건에 따라 실행해야 할 내용이 복잡하고 여러줄이 생긴다면 삼항 조건 연산자는 가독성이 떨어지기 때문에 if … else 문을 사용하는 것이 좋다.
+조건식은 삼항 조건 연산자로 표현이 가능하다. 하지만 조건에 따라 실행해야 할 내용이 복잡하고 여러줄이 생긴다면 삼항 조건 연산자는 가독성이 떨어지기 때문에 if … else 문을 사용하는 것이 좋다.
 
-- switch 문
+## 2.1 switch 문
 
-  `switch문` 은 주어진 표현식을 평가하여 그 값을 일치하는 case문으로 실행 흐름을 옮긴다.
+`switch문` 은 주어진 표현식을 평가하여 그 값을 일치하는 case문으로 실행 흐름을 옮긴다.
 
-  `switch문` 의 흐름은 `switch문` 의 표현식과 일치하는 case문이 없다면 실행 순서는 default 문으로 이동한다. default 문은 선택사항으로, 사용할 수도 있고 사용하지 않을 수도 있다.
+`switch문` 의 흐름은 `switch문` 의 표현식과 일치하는 case문이 없다면 실행 순서는 default 문으로 이동한다. default 문은 선택사항으로, 사용할 수도 있고 사용하지 않을 수도 있다.
 
-  ```jsx
-  switch (표현식) {
-   case 표현식1:
-  	switch 문의 표현식과 표현식1이 일치하면 실행될 문;
-  	break;
-   case 표현식2:
-  	switch 문의 표현식과 표현식2이 일치하면 실행될 문;
-  	break;
-   default:
-  	switch 문의 표현식과 일치하는 case문이 없을때 실행될 문;
-  }
-  ```
+```jsx
+switch (표현식) {
+ case 표현식1:
+	switch 문의 표현식과 표현식1이 일치하면 실행될 문;
+	break;
+ case 표현식2:
+	switch 문의 표현식과 표현식2이 일치하면 실행될 문;
+	break;
+ default:
+	switch 문의 표현식과 일치하는 case문이 없을때 실행될 문;
+}
+```
 
-  `if…else` 문의 조건식은 불리언 값으로 평가되어야 하지만 `switch` 문의 표현식은 불리언 값 보다는 문자열이나 숫자 값인 경우가 많다. 다시말해 `if…else` 문은 논리적 참, 거짓으로 실행할 코드 블록을 결정하지만 `switch` 문은 논리적 참, 거짓보다는 `case` 값에 따라 실행할 코드 블록을 결정할 때 사용한다.
+`if…else` 문의 조건식은 불리언 값으로 평가되어야 하지만 `switch` 문의 표현식은 불리언 값 보다는 문자열이나 숫자 값인 경우가 많다. 다시말해 `if…else` 문은 논리적 참, 거짓으로 실행할 코드 블록을 결정하지만 `switch` 문은 논리적 참, 거짓보다는 `case` 값에 따라 실행할 코드 블록을 결정할 때 사용한다.
 
-  ```jsx
-  var a,
-    b = 2;
-  var sum = a + b;
-  var result;
+```jsx
+var a,
+  b = 2;
+var sum = a + b;
+var result;
 
-  switch (sum) {
-    case 1:
-      result = 1;
-    case 2:
-      result = 2;
-    case 3:
-      result = 3;
-    case 4:
-      result = 4;
-    default:
-      result = 10;
-  }
+switch (sum) {
+  case 1:
+    result = 1;
+  case 2:
+    result = 2;
+  case 3:
+    result = 3;
+  case 4:
+    result = 4;
+  default:
+    result = 10;
+}
 
-  console.log(result); // 10
-  ```
+console.log(result); // 10
+```
 
-  위 예제를 실행해 보면 4가 출력되지 않고 10이 출력된다. 이유가 무엇일까?
+위 예제를 실행해 보면 4가 출력되지 않고 10이 출력된다. 이유가 무엇일까?
 
-  해당 코드에서 break 문을 사용하지 않았기 때문이다. 위 코드에서는 `switch` 문의 표현식의 결과와 `case`에 해당하는 표현식의 값과 비교하며 실행되는건 맞지만, 값이 일치하는 `case` 문을 찾아도 `switch` 문을 탈출하지 않고 이후의 모든 `case` 문 과 `default` 문을 실행했기 때문이다.
+해당 코드에서 break 문을 사용하지 않았기 때문이다. 위 코드에서는 `switch` 문의 표현식의 결과와 `case`에 해당하는 표현식의 값과 비교하며 실행되는건 맞지만, 값이 일치하는 `case` 문을 찾아도 `switch` 문을 탈출하지 않고 이후의 모든 `case` 문 과 `default` 문을 실행했기 때문이다.
 
-  이를 폴스루(fall through)라 한다.
+이를 폴스루(fall through)라 한다.
 
-  다시 말해 result 변수에 4가 할당되어 출력하지 않고 연이어 default 문 까지 실행되어 10이 할당되고 출력되었던 것이다. break문을 사용해야 switch문에 알맞는 case표현식이 실행되고 switch문을 탈출해 출력된다.
+다시 말해 result 변수에 4가 할당되어 출력하지 않고 연이어 default 문 까지 실행되어 10이 할당되고 출력되었던 것이다. break문을 사용해야 switch문에 알맞는 case표현식이 실행되고 switch문을 탈출해 출력된다.
 
-  ```jsx
-  var a,
-    b = 2;
-  var sum = a + b;
-  var result;
+```jsx
+var a,
+  b = 2;
+var sum = a + b;
+var result;
 
-  switch (sum) {
-    case 1:
-      result = 1;
-      break;
-    case 2:
-      result = 2;
-      break;
-    case 3:
-      result = 3;
-      break;
-    case 4:
-      result = 4;
-      break;
-    default:
-      result = 10;
-    // default문에는 break문을 생략하는게 일반적이다.
-  }
-
-  console.log(result); // 4
-  ```
-
-  break 문을 생략한 폴스루가 유용한 경우도 있다.
-
-  ```jsx
-  var year = 2000;
-  var month = 2;
-  var days = 0;
-
-  switch(month){
-   case 1: case 3: case 5: case 7; case 8: case 10: case 12:
-    days = 31;
+switch (sum) {
+  case 1:
+    result = 1;
     break;
-   case 4: case 6: case 9: case 11:
-  }
-  ```
+  case 2:
+    result = 2;
+    break;
+  case 3:
+    result = 3;
+    break;
+  case 4:
+    result = 4;
+    break;
+  default:
+    result = 10;
+  // default문에는 break문을 생략하는게 일반적이다.
+}
 
-  `if…else` 문과 `switch`문의 차이점
+console.log(result); // 4
+```
 
-  | 기준        | if 문                                                                  | switch 문                                                                         |
-  | ----------- | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------- |
-  | 조건의 유형 | 보다 복잡한 조건과 표현식을 평가할 수 있습니다.                        | 주로 한 변수의 값이 미리 정의된 값 중 하나와 일치하는지 검사하는 데 사용됩니다.   |
-  | 유연성      | 다양한 조건(범위, 연산 등)을 사용할 수 있어 유연합니다.                | 비교할 값이 명확하고 한정적일 때 유리합니다.                                      |
-  | 가독성      | 복잡하거나 중첩된 조건에서는 가독성이 떨어질 수 있습니다.              | 명확한 값에 따른 분기를 다룰 때 가독성이 좋습니다.                                |
-  | 실행 속도   | 조건이 복잡할수록 실행 속도가 느려질 수 있습니다.                      | 단순 비교에서는 if 문보다 빠를 수 있습니다.                                       |
-  | 사용 적합성 | 범위 검사나 여러 조건의 조합, 복잡한 논리 표현이 필요할 때 적합합니다. | 값의 일치 여부만 검사할 때 적합하며, 특정 값을 기준으로 분기를 다루기에 좋습니다. |
-  | 기타 특징   | else if와 else를 통해 다양한 조건 분기를 처리할 수 있습니다.           | default 절을 사용하여 일치하는 케이스가 없을 때의 기본 동작을 정의할 수 있습니다. |
+break 문을 생략한 폴스루가 유용한 경우도 있다.
 
-  ### 반복문
+```jsx
+var year = 2000;
+var month = 2;
+var days = 0;
 
-  ***
+switch(month){
+ case 1: case 3: case 5: case 7; case 8: case 10: case 12:
+  days = 31;
+  break;
+ case 4: case 6: case 9: case 11:
+}
+```
 
-  반복문은 조건식의 평과 결과가 참인 경우 코드 블록을 실행한다. 조건식이 거짓일 때까지 반복된다.
+`if…else` 문과 `switch`문의 차이점
 
-  자바스크립트는 세 가지 반복문을 제공하는데 for 문, while 문 , do…while 문을 제공한다.
+| 기준        | if 문                                                                  | switch 문                                                                         |
+| ----------- | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------- |
+| 조건의 유형 | 보다 복잡한 조건과 표현식을 평가할 수 있습니다.                        | 주로 한 변수의 값이 미리 정의된 값 중 하나와 일치하는지 검사하는 데 사용됩니다.   |
+| 유연성      | 다양한 조건(범위, 연산 등)을 사용할 수 있어 유연합니다.                | 비교할 값이 명확하고 한정적일 때 유리합니다.                                      |
+| 가독성      | 복잡하거나 중첩된 조건에서는 가독성이 떨어질 수 있습니다.              | 명확한 값에 따른 분기를 다룰 때 가독성이 좋습니다.                                |
+| 실행 속도   | 조건이 복잡할수록 실행 속도가 느려질 수 있습니다.                      | 단순 비교에서는 if 문보다 빠를 수 있습니다.                                       |
+| 사용 적합성 | 범위 검사나 여러 조건의 조합, 복잡한 논리 표현이 필요할 때 적합합니다. | 값의 일치 여부만 검사할 때 적합하며, 특정 값을 기준으로 분기를 다루기에 좋습니다. |
+| 기타 특징   | else if와 else를 통해 다양한 조건 분기를 처리할 수 있습니다.           | default 절을 사용하여 일치하는 케이스가 없을 때의 기본 동작을 정의할 수 있습니다. |
 
-  - `for문`
+# 3.반복문
 
-    `for문`의 형태는 다음과 같다.
+---
 
-    ```jsx
-    for(변수 선언문 또는 할당문; 조건식; 증감식){
-    	조건식이 참인 경우 반복 실행되는 문;
-    }
+반복문은 조건식의 평과 결과가 참인 경우 코드 블록을 실행한다. 조건식이 거짓일 때까지 반복된다.
 
-    for(var i = 0; i < 10; i++) {
-    	console.log(i); // 0,1,2,3,4,5,6,7,8,9
-    }
-    ```
+자바스크립트는 세 가지 반복문을 제공하는데 for 문, while 문 , do…while 문을 제공한다.
 
-    이것이 일반적이 `for문`의 형태이다.
+## 3.1 for문
 
-    실행순서
+`for문`의 형태는 다음과 같다.
 
-    1. `for`문을 실행한 맨 먼저 변수 선언문 var i = 0; 이 실행된다. 변수 선언문은 단 한 번만 실행된다.
-    2. 변수 선언문의 실행이 종료되면 조건식이 실행된다. 현재 i 변수의 값은 0 이므로 조건신의 평가 결과는 true이다.
-    3. 조건식의 평가 결과가 true이므로 코드 블록이 실행된다. **증감문으로 실행 흐름이 이동하는 것이 아니라 코드 블록으로 실행 흐름이 이동하는 것**
-    4. 코드 블록의 실행이 종료되면 증감식 i++가 실행되어 i 변수의 값은 1이 된다.
-    5. 증감식 실행이 종료되면 다시 조건식이 실행된다. 변수 선언문이 실행되는 것이 아니라 **조건식이 실행된다는 점에 주의할 것**
+```jsx
+for(변수 선언문 또는 할당문; 조건식; 증감식){
+	조건식이 참인 경우 반복 실행되는 문;
+}
 
-    이 순서를 반복해 조건식의 값이 false가 될 때까지 반복된다.
+for(var i = 0; i < 10; i++) {
+	console.log(i); // 0,1,2,3,4,5,6,7,8,9
+}
+```
 
-  - `while문`
+이것이 일반적이 `for문`의 형태이다.
 
-    `while`문은 주어진 조건식의 평가 결과가 참이면 코드 불록을 계속해서 반복 실행한다. `for`문은 반복 횟수가 명확할 때 주로 사용하고 `while`문은 반복 횟수가 불명확할때 주로 사용한다.
+실행순서
 
-    ```jsx
-    var count = 0;
-    while (count < 3) {
-      console.log(count); // 0, 1, 2
-      count++;
-    }
-    ```
+1. `for`문을 실행한 맨 먼저 변수 선언문 var i = 0; 이 실행된다. 변수 선언문은 단 한 번만 실행된다.
+2. 변수 선언문의 실행이 종료되면 조건식이 실행된다. 현재 i 변수의 값은 0 이므로 조건신의 평가 결과는 true이다.
+3. 조건식의 평가 결과가 true이므로 코드 블록이 실행된다. **증감문으로 실행 흐름이 이동하는 것이 아니라 코드 블록으로 실행 흐름이 이동하는 것**
+4. 코드 블록의 실행이 종료되면 증감식 i++가 실행되어 i 변수의 값은 1이 된다.
+5. 증감식 실행이 종료되면 다시 조건식이 실행된다. 변수 선언문이 실행되는 것이 아니라 **조건식이 실행된다는 점에 주의할 것**
 
-    조건식의 평가 결과가 언제나 참이면 무한루프가 발생한다.
+이 순서를 반복해 조건식의 값이 false가 될 때까지 반복된다.
 
-    무한루프에서 탈출하기 위해서는 코드 블록 내에 if 문으로 탈출 조건을 만들고 break 문으로 코드블록에서 탈출한다.
+## 3.2 while문
 
-    ```jsx
-    var count = 0;
+`while`문은 주어진 조건식의 평가 결과가 참이면 코드 불록을 계속해서 반복 실행한다. `for`문은 반복 횟수가 명확할 때 주로 사용하고 `while`문은 반복 횟수가 불명확할때 주로 사용한다.
 
-    // 무한루프
-    while (true) {
-      console.log(count);
-      count++;
-      if (count === 3) break;
-    } // 0 1 2
-    ```
+```jsx
+var count = 0;
+while (count < 3) {
+  console.log(count); // 0, 1, 2
+  count++;
+}
+```
 
-  - `do…while문`
+조건식의 평가 결과가 언제나 참이면 무한루프가 발생한다.
 
-    `do…while`문은 코드 블록을 먼저 실행하고 조건식을 평가한다. 따라서 코드블록은 무조건 한 번 실행된다.
+무한루프에서 탈출하기 위해서는 코드 블록 내에 if 문으로 탈출 조건을 만들고 break 문으로 코드블록에서 탈출한다.
 
-    ```jsx
-    var count = 0;
+```jsx
+var count = 0;
 
-    // count가 3보다 작을 때까지 코드 블록을 계속 반복 실행한다.
-    do {
-      console.log(count); // 0 1 2
-      count++;
-    } while (count < 3);
-    ```
+// 무한루프
+while (true) {
+  console.log(count);
+  count++;
+  if (count === 3) break;
+} // 0 1 2
+```
 
-  ### break문
+## 3.3 do…while문
 
-  ***
+`do…while`문은 코드 블록을 먼저 실행하고 조건식을 평가한다. 따라서 코드블록은 무조건 한 번 실행된다.
 
-  `break`문은 코드 블록을 탈출한다. 좀 더 정확히 말하자면 특정 문에 대한 코드블록을 탈출한다.
+```jsx
+var count = 0;
 
-  ex) for, for..in, for…of, while, do…while, switch, 레이블 문 등에서 사용한다.
+// count가 3보다 작을 때까지 코드 블록을 계속 반복 실행한다.
+do {
+  console.log(count); // 0 1 2
+  count++;
+} while (count < 3);
+```
 
-  예시 이외에 문에서 사용하면 SyntaxError(문법 에러)가 발생한다.
+# 4.break문
 
-  ```jsx
-  if(true) {
-  	break; // Uncaught SyntaxError
-  }
-  ```
+---
+
+`break`문은 코드 블록을 탈출한다. 좀 더 정확히 말하자면 특정 문에 대한 코드블록을 탈출한다.
+
+ex) for, for..in, for…of, while, do…while, switch, 레이블 문 등에서 사용한다.
+
+예시 이외에 문에서 사용하면 SyntaxError(문법 에러)가 발생한다.
+
+```jsx
+if(true) {
+	break; // Uncaught SyntaxError
+}
+```
 
       <aside>
 
-  💡 참고로 레이블 문이란 식별자가 붙은 문을 말한다.
+💡 참고로 레이블 문이란 식별자가 붙은 문을 말한다.
 
       </aside>
 
-  ```jsx
-  // foo라는 레이블 식별자가 붙은 레이블 문
-  foo: console.log("foo");
-  ```
+```jsx
+// foo라는 레이블 식별자가 붙은 레이블 문
+foo: console.log("foo");
+```
 
-  ### continue 문
+# 5.continue 문
 
-  ***
+---
 
-  `continue`문은 반복문의 코드 블록 실행을 현 지점에서 중단하고 반복문의 증감식으로 실행 흐름을 이동시킨다.
+`continue`문은 반복문의 코드 블록 실행을 현 지점에서 중단하고 반복문의 증감식으로 실행 흐름을 이동시킨다.
 
-  break 문 처럼 반복문을 탈출 하지는 않는다.
+break 문 처럼 반복문을 탈출 하지는 않는다.
 
-  ex)
+ex)
 
 ```jsx
 var string = "Hello World";
