--- a/content/blog/function.mdx
+++ b/content/blog/function.mdx
@@ -25,7 +25,9 @@ var result = add(2,5);
 console.log(result) /// 7
 ```
 
-## 함수를 사용하는 이유
+# 1. 함수
+
+## 1.1 함수를 사용하는 이유
 
 ---
 
@@ -35,7 +37,7 @@ console.log(result) /// 7
 
 함수는 객체 타입 값이다. 따라서 식별자(이름)을 붙일 수 있다. 함수 이름은 변수 이름과 마찬가지로 함수의 역할을 적절히 잘 설명할 수 있도록 지어야한다. 이는 **코드의 가독성**을 향상 시킨다.
 
-## 함수 리터럴
+## 1.2 함수 리터럴
 
 ---
 
@@ -52,7 +54,7 @@ var func = function add(x, y) {
 
 즉, **함수는 객체 이다.**
 
-## 함수의 정의
+## 1.3 함수의 정의
 
 ---
 
@@ -64,7 +66,7 @@ var func = function add(x, y) {
 | 함수 표현식 (Function Expression)  | 변수에 함수를 할당하는 형태로, 함수 선언 후에 호출 가능                         | `const sum = function(a, b) { return a + b; };` |
 | 화살표 함수 (Arrow Function)       | ES6에서 도입된, function 키워드 없이 간결하게 함수를 정의할 수 있는 방식        | `const sum = (a, b) => a + b;`                  |
 
-### 함수 선언문
+### 1.3.1 함수 선언문
 
 함수 선언문을 사용해 함수를 정의하는 방식
 
@@ -122,7 +124,7 @@ bar(); // ReferenceError: bar is not defined
 
 함수 선언문을 함수 표현식으로 변환해 함수 객체를 생성한다고 생각할 수 있는데 **함수 선언문과 함수 표현식이 정확히 같은 동작을 하지는 않는다.**
 
-### 함수 표현식
+### 1.3.2 함수 표현식
 
 값의 성질을 갖는 객체를 일급 객체라 한다. 자바스크립트의 함수는 `일급 객체`다. 함수가 `일급 객체` 라는 것은 함수를 값처럼 자유롭게 사용할 수 있다는 의미다.
 
@@ -157,7 +159,7 @@ console.log(foo(2, 5)); // ReferenceError: foo is not defined
 
 </aside>
 
-### 함수 생성 시점과 함수 호이스팅
+### 1.3.3 함수 생성 시점과 함수 호이스팅
 
 ```jsx
 console.log(add); // f add(x, y)
@@ -183,7 +185,7 @@ var sub = function (x, y) {
 
 따라서 **함수 표현식으로 함수를 정의하면 함수 호이스팅이 발생하는 것이 아니라 변수 호이스팅이 발생한다.**
 
-### Function 생성자 함수
+### 1.3.4 Function 생성자 함수
 
 - 생성자 함수 (constuctor function)
 
@@ -212,7 +214,7 @@ var add1 = (function (x, y) {
 console.log(add1(1, 2)); // ReferenceError: a is not defined 다르게 동작
 ```
 
-### 화살표 함수
+### 1.3.6 화살표 함수
 
 ES6에서 도입된 화살표 함수로 function 키워드 대신 화살표흫 사용해 좀 더 간략한 방법으로 선언
 
@@ -225,7 +227,7 @@ console.log(add(2, 5)); // 7
 
 화살표 함수는 선언문 함수와 표현식 함수를 대체하려고 나온 것이 아니다. 화살표 함수는 생성자 함수로 사용할 수 없으며, 기존 함수와 this 바인딩 방식도 다르고, prototype프로퍼티가 없으며 arguments 객체를 생성하지 않음
 
-## 함수호출
+## 1.4 함수호출
 
 ---
 
@@ -280,12 +282,12 @@ function add(x, y) {
 console.log(add(2, 3, 4, 5)); // 5
 ```
 
-### 인수 확인
+### 1.4.1 인수 확인
 
 1. 자바스크립트 함수는 매개변수와 인수 개수가 일치하는지 확인하지 않는다.
 2. 자바스크립트는 동적 타입 언어다. 따라서 자바스크립트 함수는 매개변수의 타입을 사전에 지정할 수 없다.
 
-### 매개변수의 최대 개수
+### 1.4.2 매개변수의 최대 개수
 
 ECMAScript 사양에서는 매개변수 최대 개수에 대해 명시적으로 제한하고 있지 않다. 하지만 매개변수는 코드를 이해하는 데 방해되는 요소이기 때문에 적을 수록 좋다. 매개변수의 개수가 많다는 것은 함수가 여러가지 일을 한다는 것이기 떄문에 바람직하지 않다. **이상적인 함수는 한 가지 일만 해야하고 가급적 작게 만들어져야 한다.**
 
@@ -301,7 +303,7 @@ $.ajax({
 
 하지만 주의할 점은 외부에서 내부로 전달한 객체는 부수 효과가 발생한다는 것이다.
 
-### 반환문 (return)
+### 1.4.3 반환문 (return)
 
 반환문은 다양한 특징이 있다.
 
@@ -310,7 +312,7 @@ $.ajax({
 3. 반환문은 생략할 수 있다. 이때 함수는 함수 몸체 마지막 문까지 다 실행한 후 암묵적을 undefined를 반환한다.
 4. 반환문은 함수 몸체 내부에서만 사용할 수 있다.
 
-## 참조에 의한 전달과 외부 상태의 변경
+## 1.5 참조에 의한 전달과 외부 상태의 변경
 
 ---
 
