--- a/content/blog/Expression-Statement.mdx
+++ b/content/blog/Expression-Statement.mdx
@@ -1,6 +1,6 @@
 ---
-title: 표현식과 문(Expression과 Statement)
-description: Expression과 Statement에 대한 이야기..
+title: 표현식과 문
+description: 표현식과 문에 대한 이야기..
 date: 2024-04-24
 tags: [javascript, mordern]
 published: true
