[feat] series 페이지 추가

--- a/content/blog/Comparison-of-raw-values-and-objects.mdx
+++ b/content/blog/Comparison-of-raw-values-and-objects.mdx
@@ -3,6 +3,7 @@ title: 원시 값과 객체의 비교
 description: 원시 값과 객체를 비교해보자...!
 date: 2024-04-26
 tags: [javascript, mordern, object]
+series: Mordern
 published: true
 ---
 
