--- a/content/blog/Internal-slots-and-Internal-methods.mdx
+++ b/content/blog/Internal-slots-and-Internal-methods.mdx
@@ -3,6 +3,7 @@ title: 프로퍼티 어트리뷰트
 description: 내부 슬롯과 내부 메서드 처음 들어보는 개념..?
 date: 2024-04-28
 tags: [javascript, mordern, 내부슬롯, 내부메서드, internalSlot, internalMethod]
+series: Mordern
 published: true
 ---
 
