--- a/content/blog/Type-Conversions-Short-Circuit-Evaluation.mdx
+++ b/content/blog/Type-Conversions-Short-Circuit-Evaluation.mdx
@@ -3,6 +3,7 @@ title: 타입변환과 단축평가
 description: 타입변환과 단축평가 이야기..!!!
 date: 2024-04-25
 tags: [javascript, mordern]
+series: Mordern
 published: true
 ---
 
