--- a/content/blog/function-type.mdx
+++ b/content/blog/function-type.mdx
@@ -3,6 +3,7 @@ title: 함수의 종류
 description: 어떤 함수가 존재할까?
 date: 2024-04-28
 tags: [javascript, mordern, function]
+series: Mordern
 published: true
 ---
 
