--- a/content/blog/function.mdx
+++ b/content/blog/function.mdx
@@ -3,6 +3,7 @@ title: 함수
 description: 함수란 어떤것일까? 또 어떻게 사용하는거지?
 date: 2024-04-26
 tags: [javascript, mordern, function]
+series: Mordern
 published: true
 ---
 
