--- a/content/blog/global-variable.mdx
+++ b/content/blog/global-variable.mdx
@@ -3,6 +3,7 @@ title: 전역 변수의 문제점
 description: 전역 변수는 왜 신중하게 사용해야 할까?
 date: 2024-04-28
 tags: [javascript, mordern, 전역변수, 변수]
+series: Mordern
 published: true
 ---
 
