--- a/content/blog/object-literal.mdx
+++ b/content/blog/object-literal.mdx
@@ -3,6 +3,7 @@ title: 객체 리터럴
 description: 리터럴.... 어렵다 너..
 date: 2024-04-25
 tags: [javascript, mordern, litral, object]
+series: Mordern
 published: true
 ---
 
