--- a/content/blog/operation.mdx
+++ b/content/blog/operation.mdx
@@ -3,6 +3,7 @@ title: 연산자
 description: 연산자 이야기..!!!
 date: 2024-04-25
 tags: [javascript, mordern, operation]
+series: Mordern
 published: true
 ---
 
