--- a/content/blog/scope.mdx
+++ b/content/blog/scope.mdx
@@ -3,6 +3,7 @@ title: 스코프(scope)
 description: 스코프 스코프하는데 대채 뭔데?
 date: 2024-04-28
 tags: [javascript, mordern, scope]
+series: Mordern
 published: true
 ---
 
