--- a/content/blog/variable-type.mdx
+++ b/content/blog/variable-type.mdx
@@ -3,6 +3,7 @@ title: 변수 키워드 종류
 description: 변수는 키워드마다 차이점에 대한 이야기..
 date: 2024-04-28
 tags: [javascript, mordern, 전역변수, 변수, let, const, var]
+series: Mordern
 published: true
 ---
 
