--- a/content/blog/context.mdx
+++ b/content/blog/context.mdx
@@ -3,6 +3,7 @@ title: 실행 컨텍스트
 description: 실행 컨텍스트 이야기..!!!
 date: 2024-04-18
 tags: [context, javascript, mordern]
+series: Mordern
 published: true
 ---
 
