--- a/content/blog/dataType.mdx
+++ b/content/blog/dataType.mdx
@@ -3,6 +3,7 @@ title: 데이터 타입
 description: 데이터 타입 대한 이야기..
 date: 2024-04-25
 tags: [javascript, mordern, 데이터 타입]
+series: Mordern
 published: true
 ---
 
