--- a/content/blog/tree-datastructure.mdx
+++ b/content/blog/tree-datastructure.mdx
@@ -32,11 +32,11 @@ published: true
 
 ![트리 데이터구조 썸네일](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/data-structure/tree/tree-datastructure.webp)
 
-### 특징
+### 트리구조 특징
 
 - 이진트리는 종류가 다양하기 때문에 삽입, 삭제, 탐색 연산시간이 보장되지 않는다.
 
-### 예시)
+### 트리구조 예시
 
 ```jsx
 class Node {
@@ -196,16 +196,16 @@ bfs() {
 
 이진 검색 트리는 이진 트리의 한 종류로, 각 노드가 특정한 순서를 유지하며 정렬되는 트리다.
 
-### 규칙
+### 이진 검색 트리 규칙
 
 - 왼쪽 서브트리: 각 노드의 왼쪽 서브트리에 있는 모든 노드는 그 노드의 값보다 작아야한다.
 - 오른쪽 서브트리: 각 노드의 오른쪽 서브트리에 있는 노드는 그 노드의 값보다 커야한다.
 
-### 특징
+### 이진 검색 트리 특징
 
 - 이진 검색 트리는 삽입, 삭제, 탐색 연산이 O(log n)의 시간 복잡도를 갖고 최대 O(n)의 값을 갖는다.
 
-### 예시
+### 이진 검색 트리 예시
 
 이진 검색 트리는 이진트리와 같이 우선 `Node` 클래스를 정의한다.
 
