[docs] 알고리즘 정리 글  추가

--- a/content/blog/tree-datastructure.mdx
+++ b/content/blog/tree-datastructure.mdx
@@ -3,9 +3,11 @@ title: Tree Data Structure
 description: 트리구조에 대하여
 date: 2024-05-27
 tags: [javascript, algorithm, structure]
-series: 자료 구조
+series: 알고리즘
 published: true
 ---
+
+![알고리즘 썸네일](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/algorithm/algorithm.webp)
 
 ## 트리 데이터 구조
 
@@ -30,7 +32,7 @@ published: true
 
 이진 트리는 각 노드가 최대 두 개의 자식 노드를 가지는 트리이다.
 
-![트리 데이터구조 썸네일](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/data-structure/tree/tree-datastructure.webp)
+![트리 데이터구조 썸네일](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/algorithm/tree/tree-datastructure.webp)
 
 ### 트리구조 특징
 
