--- a/content/blog/algorithm-base-Math-String.mdx
+++ b/content/blog/algorithm-base-Math-String.mdx
@@ -91,11 +91,11 @@ console.log(str.endsWith("Javascript")); // true
 console.log(str.startsWith("World")); // false
 ```
 
-- **String.indexOf(): 문자열에 어떤 문자열이 포함되어있는지**
-  - **존재하지 않으면 -1을 반환한다. 존재하면 시작지점이나 위치를 반환한다.**
-- **String.includes(): 문자열에 어떤 문자열이 포함되어 있는지 확인**
+- `String.indexOf()`: 문자열에 어떤 문자열이 포함되어있는지
+  - 존재하지 않으면 -1을 반환한다. 존재하면 시작지점이나 위치를 반환한다.
+- `String.includes()`: 문자열에 어떤 문자열이 포함되어 있는지 확인
   - 대소문자를 구분하며 존재하면 true 존재하지 않으면 false를 반환한다.
-- **String.startsWith(), String.endsWith(): 문자열이 어떤 문자열로 시작하거나 끝나는지 확인**
+- `String.startsWith(), String.endsWith()`: 문자열이 어떤 문자열로 시작하거나 끝나는지 확인
 
 ## 3. 문자열이 같은지 비교
 
