fix : 잘못된 이미지 경로 수정

--- a/content/blog/cs-computer.mdx
+++ b/content/blog/cs-computer.mdx
@@ -7,7 +7,7 @@ series: CS
 published: true
 ---
 
-![원시 값과 객체의 비교 썸네일](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/cs/computer/computer.webp)
+![컴퓨터구조](https://github.com/thdtjdgml415/next-blog/blob/main/assets/img/cs/computer/comuter.webp?raw=true)
 
 대략으로 컴퓨터 구조 거시적으로 보기
 
