--- a/content/blog/cs-cpu.mdx
+++ b/content/blog/cs-cpu.mdx
@@ -379,3 +379,5 @@ OOOE(Out-of-Order-Execution)
 📌 즉, 순서를 바꾸어 실행해도 **프로그램 실행에 영향이 없는 명령어 순서**를 바꿈으로써 파이프라이닝 성능을 높이는 기법을 **비순차적 명령어** 처리라 한다.
 
 </aside>
+
+출처: 패스트캠퍼스
