--- a/content/blog/cs-data.mdx
+++ b/content/blog/cs-data.mdx
@@ -152,3 +152,5 @@ A컴퓨터와 B컴퓨터가 있다. A컴퓨터에서 인코딩 하는 방법과 
 유니코드는 코드 포인트를 인코딩하는 방식에 따라 달라진다. 즉, 유니코드 문자 집합을 인코딩하는 다양한 방법들이 있다.
 
 인코딩하는 형태에 따라 대표적으로 `UTF-8`, `UTF-16`, `UTF-32` 등으로 나누어 진다.
+
+출처: 패스트캠퍼스
