--- a/content/blog/cs-ram-rom.mdx
+++ b/content/blog/cs-ram-rom.mdx
@@ -97,3 +97,5 @@ EEPROM의 발전된, 저렴한 형태, 반도체 기반이 저장장치
 ex) USB Memory, SD카드, SSD
 
 ![data](https://raw.githubusercontent.com/thdtjdgml415/next-blog/main/assets/img/cs/ram-rom/ram-rom.webp)
+
+출처: 패스트캠퍼스
